# SEC_Scraper_v2

./: .gitignore  Cargo.toml  README.md
migrations/2018-07-10-021521_accession_numbers/: up.sql
migrations/2019-01-02-180402_create_numbers/: down.sql  up.sql
migrations/2019-01-04-035943_create_accession_numbers/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  postgres.rs  read_rss.rs  schema.rs  sec_entry.rs  timing.rs  write_entries.rs
