cargo-features = ["edition"]

[package]
edition = '2018'
name = "sec_scraper"
version = "0.1.0"
authors = ["JAlberss <johnalbers2018@u.northwestern.edu>"]


[dependencies]
xml-rs = "0.8"
reqwest = "0.8.6"
regex = "1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
error-chain = "0.12.0"