[package]
edition = '2018'
name = "sec_scraper"
version = "0.5.0"
authors = ["JAlberss <johnalbers2018@u.northwestern.edu>"]


[dependencies]
xml-rs = "0.8"
reqwest = "0.9.2"
regex = "1"
diesel = { version = "1.3.3", features = ["postgres","numeric"] }
dotenv = "0.9.0"
error-chain = "0.12.0"
http = "0.1"
bigdecimal = { version = "0.0.11", features = ["serde"] }
clap = "2.32.0"